--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-6 slide-float-image-wrapper">
+							<div class="col-md-6 slide-float-image-wrapper">
 								<img src="src/assets/img/phone-front-picture.png" alt="" />
 							</div>
 						</div>
@@ -141,7 +141,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-6 slide-float-image-wrapper">
+							<div class="col-md-6 slide-float-image-wrapper">
 								<img src="src/assets/img/phone-front-picture.png" alt="" />
 							</div>
 						</div>
@@ -342,8 +342,8 @@
 
 		<section class="section-userSign">
 			<div class="container">
-				<div class="row">
-					<div class="col-6 slide-float-image-wrapper">
+				<div class="d-flex flex-row flex-wrap h-100">
+					<div class="d-flex slide-float-image-wrapper">
 						<img src="src/assets/img/phone-front-picture-2.png" alt="" />
 					</div>
 					<div class="d-flex flex-column flex-wrap">
