--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 										любителей активного образа жизни и упрощающая организацию,
 										участие и проведение спортивных мероприятий.
 									</div>
-									<div class="slide-item-button-group mt-auto d-inline-flex">
+									<div class="mt-auto d-inline-flex slide-item-button-group">
 										<a href="" class="icon-download">
 											<img src="src/assets/img/appstore-white.svg" alt="" />
 										</a>
@@ -109,6 +109,14 @@
 							</div>
 							<div class="col-md-6 slide-float-image-wrapper">
 								<img src="src/assets/img/phone-front-picture.png" alt="" />
+								<div class="mt-auto d-inline-flex slide-item-button-group">
+									<a href="" class="icon-download">
+										<img src="src/assets/img/appstore-white.svg" alt="" />
+									</a>
+									<a href="" class="icon-download">
+										<img src="src/assets/img/googleplay-white.svg" alt="" />
+									</a>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -131,7 +139,7 @@
 										это бег, экстремальная активность, горные походы, велоспорт,
 										шахматы, фитнес, скейтбординг и плавание.
 									</div>
-									<div class="slide-item-button-group mt-auto d-inline-flex">
+									<div class="mt-auto d-inline-flex slide-item-button-group">
 										<a href="" class="icon-download">
 											<img src="src/assets/img/appstore-white.svg" alt="" />
 										</a>
@@ -143,6 +151,14 @@
 							</div>
 							<div class="col-md-6 slide-float-image-wrapper">
 								<img src="src/assets/img/phone-front-picture.png" alt="" />
+								<div class="mt-auto d-inline-flex slide-item-button-group">
+									<a href="" class="icon-download">
+										<img src="src/assets/img/appstore-white.svg" alt="" />
+									</a>
+									<a href="" class="icon-download">
+										<img src="src/assets/img/googleplay-white.svg" alt="" />
+									</a>
+								</div>
 							</div>
 						</div>
 					</div>
