--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 		<link
 			rel="stylesheet"
 			href="https://unpkg.com/swiper/swiper-bundle.min.css"
@@ -14,7 +15,7 @@
 		<link rel="stylesheet" href="src/css/mobile.css" />
 	</head>
 	<body>
-		<header>
+		<header class="mobile open">
 			<div class="container">
 				<div
 					class="
@@ -30,6 +31,9 @@
 							alt="moveon_logotype"
 							class="img-logo"
 						/>
+					</div>
+					<div class="menu-burger__header">
+						<span></span>
 					</div>
 					<div class="d-flex flex-wrap menu-wrapper">
 						<ul class="menu-ul d-inline-flex flex-wrap align-self-center">
@@ -666,6 +670,16 @@
 					clickable: true,
 				},
 				loop: true,
+			});
+
+			$('.menu-burger__header').on('click', function () {
+				if ($('header').hasClass('open')) {
+					$('header').removeClass('open mobile');
+					if ($(this).hasClass('open-menu')) $(this).removeClass('open-menu');
+				} else {
+					$('header').addClass('mobile open');
+					if (!$(this).hasClass('open-menu')) $(this).addClass('open-menu');
+				}
 			});
 		</script>
 	</body>
