section two done

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 		<link
 			rel="stylesheet"
 			href="https://unpkg.com/swiper/swiper-bundle.min.css"
@@ -15,7 +14,7 @@
 		<link rel="stylesheet" href="src/css/mobile.css" />
 	</head>
 	<body>
-		<header class="mobile open">
+		<header class="">
 			<div class="container">
 				<div
 					class="
@@ -58,22 +57,31 @@
 							align-self-center
 						"
 					>
-						<a href="#" class="icon-item">
+						<a
+							href="https://www.youtube.com/channel/UCCBVXgboWqSJINcg6f-EtaQ/about"
+							class="icon-item"
+						>
 							<img src="src/assets/img/icons/youtube.svg" />
 						</a>
-						<a href="#" class="icon-item">
+						<a
+							href="https://www.instagram.com/moveon.kz/?hl=ru https://ok.ru/profile/595242537266"
+							class="icon-item"
+						>
 							<img src="src/assets/img/icons/instagram.svg" />
 						</a>
-						<a href="#" class="icon-item">
+						<a href="https://ok.ru/profile/59524253726" class="icon-item">
 							<img src="src/assets/img/icons/ok.svg" />
 						</a>
-						<a href="#" class="icon-item">
+						<a href="https://vk.com/public203997913" class="icon-item">
 							<img src="src/assets/img/icons/vk.svg" />
 						</a>
-						<a href="#" class="icon-item">
+						<a
+							href="https://www.facebook.com/Move-On-101555015415214/  "
+							class="icon-item"
+						>
 							<img src="src/assets/img/icons/facebook.svg" />
 						</a>
-						<a href="#" class="icon-item">
+						<a href="https://t.me/moveon_kz" class="icon-item">
 							<img src="src/assets/img/icons/telegram.svg" />
 						</a>
 					</div>
@@ -181,7 +189,7 @@
 			</div>
 			<div class="swiper-wrapper slider-wrapper">
 				<div class="swiper-slide slider-item">
-					<div class="container">
+					<div class="container slider-item-container">
 						<div class="row">
 							<div class="col-md-4 d-flex flex-wrap justify-content-start">
 								<div
@@ -201,33 +209,27 @@
 									</div>
 								</div>
 							</div>
-							<div
-								class="
-									col-md-8
-									slide-float-image-wrapper
-									d-flex
-									flex-wrap
-									justify-content-end
-								"
-							>
-								<img
-									src="src/assets/img/about-number-1.svg"
-									class="img-upper"
-									alt=""
-									srcset=""
-								/>
-								<img
-									src="src/assets/img/about-img-1.png"
-									class="img-under ml-auto"
-									alt=""
-									srcset=""
-								/>
+							<div class="col-md-8 d-flex step-right-content">
+								<div class="step-image-wrapper">
+									<img
+										src="src/assets/img/about-number-1.svg"
+										class="step-number-img"
+										alt=""
+										srcset=""
+									/>
+									<img
+										src="src/assets/img/about-img-1.png"
+										class="step-main-img"
+										alt=""
+										srcset=""
+									/>
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 				<div class="swiper-slide slider-item">
-					<div class="container">
+					<div class="container slider-item-container">
 						<div class="row">
 							<div class="col-md-4 d-flex flex-wrap justify-content-start">
 								<div
@@ -245,33 +247,27 @@
 									</div>
 								</div>
 							</div>
-							<div
-								class="
-									col-md-8
-									slide-float-image-wrapper
-									d-flex
-									flex-wrap
-									justify-content-end
-								"
-							>
-								<img
-									src="src/assets/img/about-number-2.svg"
-									class="img-upper"
-									alt=""
-									srcset=""
-								/>
-								<img
-									src="src/assets/img/about-img-2.png"
-									class="img-under ml-auto"
-									alt=""
-									srcset=""
-								/>
+							<div class="col-md-8 d-flex step-right-content">
+								<div class="step-image-wrapper">
+									<img
+										src="src/assets/img/about-number-2.svg"
+										class="step-number-img"
+										alt=""
+										srcset=""
+									/>
+									<img
+										src="src/assets/img/about-img-2.png"
+										class="step-main-img"
+										alt=""
+										srcset=""
+									/>
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 				<div class="swiper-slide slider-item">
-					<div class="container">
+					<div class="container slider-item-container">
 						<div class="row">
 							<div class="col-md-4 d-flex flex-wrap justify-content-start">
 								<div
@@ -288,33 +284,27 @@
 									</div>
 								</div>
 							</div>
-							<div
-								class="
-									col-md-8
-									slide-float-image-wrapper
-									d-flex
-									flex-wrap
-									justify-content-end
-								"
-							>
-								<img
-									src="src/assets/img/about-number-3.svg"
-									class="img-upper"
-									alt=""
-									srcset=""
-								/>
-								<img
-									src="src/assets/img/about-img-3.png"
-									class="img-under ml-auto"
-									alt=""
-									srcset=""
-								/>
+							<div class="col-md-8 d-flex step-right-content">
+								<div class="step-image-wrapper">
+									<img
+										src="src/assets/img/about-number-3.svg"
+										class="step-number-img"
+										alt=""
+										srcset=""
+									/>
+									<img
+										src="src/assets/img/about-img-3.png"
+										class="step-main-img"
+										alt=""
+										srcset=""
+									/>
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 				<div class="swiper-slide slider-item">
-					<div class="container">
+					<div class="container slider-item-container">
 						<div class="row">
 							<div class="col-md-4 d-flex flex-wrap justify-content-start">
 								<div
@@ -331,27 +321,21 @@
 									</div>
 								</div>
 							</div>
-							<div
-								class="
-									col-md-8
-									slide-float-image-wrapper
-									d-flex
-									flex-wrap
-									justify-content-end
-								"
-							>
-								<img
-									src="src/assets/img/about-number-4.svg"
-									class="img-upper"
-									alt=""
-									srcset=""
-								/>
-								<img
-									src="src/assets/img/about-img-4.png"
-									class="img-under ml-auto"
-									alt=""
-									srcset=""
-								/>
+							<div class="col-md-8 d-flex step-right-content">
+								<div class="step-image-wrapper">
+									<img
+										src="src/assets/img/about-number-4.svg"
+										class="step-number-img"
+										alt=""
+										srcset=""
+									/>
+									<img
+										src="src/assets/img/about-img-4.png"
+										class="step-main-img"
+										alt=""
+										srcset=""
+									/>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -375,7 +359,6 @@
 										Получай напоминание о предстоящем старте
 									</div>
 								</div>
-								<div class="swiper-slide slider-item">asdasd</div>
 							</div>
 
 							<div class="swiper-pagination third-swiper-pagination"></div>
@@ -590,22 +573,31 @@
 								mx-auto
 							"
 						>
-							<a href="#" class="icon-item">
+							<a
+								href="https://www.youtube.com/channel/UCCBVXgboWqSJINcg6f-EtaQ/about"
+								class="icon-item"
+							>
 								<img src="src/assets/img/icons/youtube.svg" />
 							</a>
-							<a href="#" class="icon-item">
+							<a
+								href="https://www.instagram.com/moveon.kz/?hl=ru https://ok.ru/profile/595242537266"
+								class="icon-item"
+							>
 								<img src="src/assets/img/icons/instagram.svg" />
 							</a>
-							<a href="#" class="icon-item">
+							<a href="https://ok.ru/profile/595242537266" class="icon-item">
 								<img src="src/assets/img/icons/ok.svg" />
 							</a>
-							<a href="#" class="icon-item">
+							<a href="https://vk.com/public203997913" class="icon-item">
 								<img src="src/assets/img/icons/vk.svg" />
 							</a>
-							<a href="#" class="icon-item">
+							<a
+								href="https://www.facebook.com/Move-On-101555015415214/  "
+								class="icon-item"
+							>
 								<img src="src/assets/img/icons/facebook.svg" />
 							</a>
-							<a href="#" class="icon-item">
+							<a href="https://t.me/moveon_kz" class="icon-item">
 								<img src="src/assets/img/icons/telegram.svg" />
 							</a>
 						</div>
@@ -632,55 +624,13 @@
 				</div>
 			</div>
 		</footer>
+		<!-- Jquery JS -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
 		<!-- Swiper JS -->
 		<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
-		<!-- Initialize Swiper -->
-		<script>
-			var slider_first = new Swiper('.slider-first', {
-				pagination: {
-					el: '.swiper-pagination',
-					clickable: true,
-				},
-				autoplay: {
-					delay: 5000,
-				},
-				loop: true,
-				effect: 'fade',
-				fadeEffect: {
-					crossFade: true,
-				},
-			});
-			var slider_second = new Swiper('.slider-second', {
-				pagination: {
-					el: '.swiper-pagination',
-					clickable: true,
-				},
-				loop: true,
-				effect: 'fade',
-				fadeEffect: {
-					crossFade: true,
-				},
-				preloadImages: false,
-				lazy: true,
-			});
-			var slider_third = new Swiper('.slider-third', {
-				pagination: {
-					el: '.swiper-pagination',
-					clickable: true,
-				},
-				loop: true,
-			});
-
-			$('.menu-burger__header').on('click', function () {
-				if ($('header').hasClass('open')) {
-					$('header').removeClass('open mobile');
-					if ($(this).hasClass('open-menu')) $(this).removeClass('open-menu');
-				} else {
-					$('header').addClass('mobile open');
-					if (!$(this).hasClass('open-menu')) $(this).addClass('open-menu');
-				}
-			});
-		</script>
+		<!-- Custom JS -->
+		<script src="src/js/script.js"></script>
 	</body>
 </html>
