menu links added

--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
 					<div class="d-flex flex-wrap menu-wrapper">
 						<ul class="menu-ul d-inline-flex flex-wrap align-self-center">
 							<li class="menu-li">
-								<a href="">Проект Move On</a>
+								<a href="#about">Проект Move On</a>
 							</li>
 							<li class="menu-li">
-								<a href="">Стать участником</a>
+								<a href="#sign">Стать участником</a>
 							</li>
 							<li class="menu-li">
-								<a href="">Стать партнером</a>
+								<a href="#partner">Стать партнером</a>
 							</li>
-							<li class="menu-li"><a href="">Контакты</a></li>
+							<li class="menu-li"><a href="#contacts">Контакты</a></li>
 						</ul>
 					</div>
 					<div
@@ -179,7 +179,10 @@
 			<div class="swiper-pagination first-swiper-pagination"></div>
 		</section>
 
-		<section class="slider section-about swiper-container slider-second">
+		<section
+			class="slider section-about swiper-container slider-second"
+			id="about"
+		>
 			<div class="container">
 				<div class="row">
 					<div class="col-12 d-flex flex-wrap justify-content-center">
@@ -344,7 +347,7 @@
 			<div class="swiper-pagination"></div>
 		</section>
 
-		<section class="section-userSign">
+		<section class="section-userSign" id="sign">
 			<div class="container">
 				<div class="d-flex flex-row flex-wrap h-100">
 					<div class="d-flex slide-float-image-wrapper">
@@ -376,7 +379,7 @@
 			</div>
 		</section>
 
-		<section class="section-partnerSign">
+		<section class="section-partnerSign" id="partner">
 			<div class="container">
 				<div class="row">
 					<div class="col-12 d-flex flex-wrap justify-content-center">
@@ -536,7 +539,7 @@
 		</section>
 
 		<footer>
-			<div class="container">
+			<div class="container" id="contacts">
 				<div class="row footer-wrapper">
 					<div
 						class="
