--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
 							<img src="src/assets/img/icons/youtube.svg" />
 						</a>
 						<a
-							href="https://www.instagram.com/moveon.kz/?hl=ru https://ok.ru/profile/595242537266"
+							href="https://www.instagram.com/moveon.kz/?hl=ru"
 							class="icon-item"
 						>
 							<img src="src/assets/img/icons/instagram.svg" />
 						</a>
-						<a href="https://ok.ru/profile/59524253726" class="icon-item">
+						<a href="https://ok.ru/profile/595242537266" class="icon-item">
 							<img src="src/assets/img/icons/ok.svg" />
 						</a>
 						<a href="https://vk.com/public203997913" class="icon-item">
@@ -583,7 +583,7 @@
 								<img src="src/assets/img/icons/youtube.svg" />
 							</a>
 							<a
-								href="https://www.instagram.com/moveon.kz/?hl=ru https://ok.ru/profile/595242537266"
+								href="https://www.instagram.com/moveon.kz/?hl=ru"
 								class="icon-item"
 							>
 								<img src="src/assets/img/icons/instagram.svg" />
