--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-12 d-flex flex-wrap justify-content-center">
-						<span class="block-title">о приложении</span>
+						<span class="block-title mb-0">о приложении</span>
 					</div>
 				</div>
 			</div>
@@ -243,6 +243,43 @@
 										align-self-start
 									"
 								>
+									<div class="slide-item-title align-self-start">Узнавай</div>
+									<div class="slide-item-text align-self-start mb-auto">
+										Каждую неделю новые интересные соревнования
+									</div>
+								</div>
+							</div>
+							<div class="col-md-8 d-flex step-right-content">
+								<div class="step-image-wrapper">
+									<img
+										src="src/assets/img/about-number-2.svg"
+										class="step-number-img"
+										alt=""
+										srcset=""
+									/>
+									<img
+										src="src/assets/img/about-img-4.png"
+										class="step-main-img"
+										alt=""
+										srcset=""
+									/>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="swiper-slide slider-item">
+					<div class="container slider-item-container">
+						<div class="row">
+							<div class="col-md-4 d-flex flex-wrap justify-content-start">
+								<div
+									class="
+										d-flex
+										flex-wrap flex-column
+										slide-item-content
+										align-self-start
+									"
+								>
 									<div class="slide-item-title align-self-start">Участвуй</div>
 									<div class="slide-item-text align-self-start mb-auto">
 										Широкий выбор спортивных мероприятий не оставит равнодушным
@@ -253,7 +290,7 @@
 							<div class="col-md-8 d-flex step-right-content">
 								<div class="step-image-wrapper">
 									<img
-										src="src/assets/img/about-number-2.svg"
+										src="src/assets/img/about-number-3.svg"
 										class="step-number-img"
 										alt=""
 										srcset=""
@@ -290,50 +327,13 @@
 							<div class="col-md-8 d-flex step-right-content">
 								<div class="step-image-wrapper">
 									<img
-										src="src/assets/img/about-number-3.svg"
-										class="step-number-img"
-										alt=""
-										srcset=""
-									/>
-									<img
-										src="src/assets/img/about-img-3.png"
-										class="step-main-img"
-										alt=""
-										srcset=""
-									/>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="swiper-slide slider-item">
-					<div class="container slider-item-container">
-						<div class="row">
-							<div class="col-md-4 d-flex flex-wrap justify-content-start">
-								<div
-									class="
-										d-flex
-										flex-wrap flex-column
-										slide-item-content
-										align-self-start
-									"
-								>
-									<div class="slide-item-title align-self-start">Узнавай</div>
-									<div class="slide-item-text align-self-start mb-auto">
-										Каждую неделю новые интересные соревнования
-									</div>
-								</div>
-							</div>
-							<div class="col-md-8 d-flex step-right-content">
-								<div class="step-image-wrapper">
-									<img
 										src="src/assets/img/about-number-4.svg"
 										class="step-number-img"
 										alt=""
 										srcset=""
 									/>
 									<img
-										src="src/assets/img/about-img-4.png"
+										src="src/assets/img/about-img-3.png"
 										class="step-main-img"
 										alt=""
 										srcset=""
@@ -520,7 +520,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="container partner-link-wrapper">
+			<div class="container partner-link-wrapper ">
 				<div class="d-flex flex-wrap flex-row justify-content-around">
 					<a href="#" class="partner-link align-self-center">
 						<img src="src/assets/img/фст 1.png" alt="parter_1" />
