app links added

--- a/index.html
+++ b/index.html
@@ -201,10 +201,16 @@
 										участие и проведение спортивных мероприятий.
 									</div>
 									<div class="mt-auto d-inline-flex slide-item-button-group">
-										<a href="" class="icon-download">
+										<a
+											href="https://apps.apple.com/kz/app/moveon/id1487087195"
+											class="icon-download"
+										>
 											<img src="src/assets/img/appstore-white.svg" alt="" />
 										</a>
-										<a href="" class="icon-download">
+										<a
+											href="https://play.google.com/store/apps/details?id=kz.moveon.android"
+											class="icon-download"
+										>
 											<img src="src/assets/img/googleplay-white.svg" alt="" />
 										</a>
 									</div>
@@ -213,10 +219,16 @@
 							<div class="col-md-6 slide-float-image-wrapper">
 								<img src="src/assets/img/phone-front-picture.png" alt="" />
 								<div class="mt-auto d-inline-flex slide-item-button-group">
-									<a href="" class="icon-download">
+									<a
+										href="https://apps.apple.com/kz/app/moveon/id1487087195"
+										class="icon-download"
+									>
 										<img src="src/assets/img/appstore-white.svg" alt="" />
 									</a>
-									<a href="" class="icon-download">
+									<a
+										href="https://play.google.com/store/apps/details?id=kz.moveon.android"
+										class="icon-download"
+									>
 										<img src="src/assets/img/googleplay-white.svg" alt="" />
 									</a>
 								</div>
@@ -243,10 +255,16 @@
 										шахматы, фитнес, скейтбординг и плавание.
 									</div>
 									<div class="mt-auto d-inline-flex slide-item-button-group">
-										<a href="" class="icon-download">
+										<a
+											href="https://apps.apple.com/kz/app/moveon/id1487087195"
+											class="icon-download"
+										>
 											<img src="src/assets/img/appstore-white.svg" alt="" />
 										</a>
-										<a href="" class="icon-download">
+										<a
+											href="https://play.google.com/store/apps/details?id=kz.moveon.android"
+											class="icon-download"
+										>
 											<img src="src/assets/img/googleplay-white.svg" alt="" />
 										</a>
 									</div>
@@ -255,10 +273,16 @@
 							<div class="col-md-6 slide-float-image-wrapper">
 								<img src="src/assets/img/phone-front-picture.png" alt="" />
 								<div class="mt-auto d-inline-flex slide-item-button-group">
-									<a href="" class="icon-download">
+									<a
+										href="https://apps.apple.com/kz/app/moveon/id1487087195"
+										class="icon-download"
+									>
 										<img src="src/assets/img/appstore-white.svg" alt="" />
 									</a>
-									<a href="" class="icon-download">
+									<a
+										href="https://play.google.com/store/apps/details?id=kz.moveon.android"
+										class="icon-download"
+									>
 										<img src="src/assets/img/googleplay-white.svg" alt="" />
 									</a>
 								</div>
@@ -458,10 +482,16 @@
 							<div class="swiper-pagination third-swiper-pagination"></div>
 						</div>
 						<div class="button-group d-inline-flex">
-							<a href="" class="icon-download">
+							<a
+								href="https://apps.apple.com/kz/app/moveon/id1487087195"
+								class="icon-download"
+							>
 								<img src="src/assets/img/appstore-black.svg" alt="" />
 							</a>
-							<a href="" class="icon-download">
+							<a
+								href="https://play.google.com/store/apps/details?id=kz.moveon.android"
+								class="icon-download"
+							>
 								<img src="src/assets/img/googleplay-black.svg" alt="" />
 							</a>
 						</div>
@@ -711,10 +741,16 @@
 					>
 						<div class="footer-col-title text-white">Скачать приложение:</div>
 						<div class="button-group d-flex flex-column">
-							<a href="" class="footer-icon-download">
+							<a
+								href="https://apps.apple.com/kz/app/moveon/id1487087195"
+								class="footer-icon-download"
+							>
 								<img src="src/assets/img/appstore-white.svg" alt="" />
 							</a>
-							<a href="" class="footer-icon-download">
+							<a
+								href="https://play.google.com/store/apps/details?id=kz.moveon.android"
+								class="footer-icon-download"
+							>
 								<img src="src/assets/img/googleplay-white.svg" alt="" />
 							</a>
 						</div>
