--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 						<a href="https://ok.ru/profile/595242537266" target="_blank" class="icon-item">
 							<img src="src/assets/img/icons/ok.svg" />
 						</a>
-						<a href="https://vk.com/public203997913" class="icon-item">
+						<a href="https://vk.com/public203997913" target="_blank" class="icon-item">
 							<img src="src/assets/img/icons/vk.svg" />
 						</a>
 						<a
