--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 			rel="stylesheet"
 			href="https://unpkg.com/swiper/swiper-bundle.min.css"
 		/>
+		<link
+			rel="shortcut icon"
+			href="src/assets/img/icons/favicon.svg"
+			type="image/x-icon"
+		/>
 		<link rel="stylesheet" href="src/css/bootstrap-grid.min.css" />
 		<link rel="stylesheet" href="src/css/custom.css" />
 		<link rel="stylesheet" href="src/css/mobile.css" />
@@ -149,25 +154,36 @@
 						"
 					>
 						<a
-							href="https://www.youtube.com/channel/UCCBVXgboWqSJINcg6f-EtaQ/about" target="_blank"
+							href="https://www.youtube.com/channel/UCCBVXgboWqSJINcg6f-EtaQ/about"
+							target="_blank"
 							class="icon-item"
 						>
 							<img src="src/assets/img/icons/youtube.svg" />
 						</a>
 						<a
-							href="https://www.instagram.com/moveon.kz/?hl=ru" target="_blank"
+							href="https://www.instagram.com/moveon.kz/?hl=ru"
+							target="_blank"
 							class="icon-item"
 						>
 							<img src="src/assets/img/icons/instagram.svg" />
 						</a>
-						<a href="https://ok.ru/profile/595242537266" target="_blank" class="icon-item">
+						<a
+							href="https://ok.ru/profile/595242537266"
+							target="_blank"
+							class="icon-item"
+						>
 							<img src="src/assets/img/icons/ok.svg" />
 						</a>
-						<a href="https://vk.com/public203997913" target="_blank" class="icon-item">
+						<a
+							href="https://vk.com/public203997913"
+							target="_blank"
+							class="icon-item"
+						>
 							<img src="src/assets/img/icons/vk.svg" />
 						</a>
 						<a
-							href="https://www.facebook.com/Move-On-101555015415214/" target="_blank"
+							href="https://www.facebook.com/Move-On-101555015415214/"
+							target="_blank"
 							class="icon-item"
 						>
 							<img src="src/assets/img/icons/facebook.svg" />
@@ -301,7 +317,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-12 d-flex flex-wrap justify-content-center">
-						<span class="block-title mb-0">о приложении</span>
+						<span class="block-title">о приложении</span>
 					</div>
 				</div>
 			</div>
@@ -470,12 +486,30 @@
 					</div>
 					<div class="d-flex flex-column flex-wrap">
 						<div class="slider-third swiper-container">
+							<div class="slider-letter-title">СТАНЬ УЧАСТНИКОМ</div>
 							<div class="swiper-wrapper slider-wrapper">
 								<div class="swiper-slide slider-item">
-									<div class="slider-letter-title">СТАНЬ УЧАСТНИКОМ</div>
 									<div class="slider-letter-text">
 										Получай напоминание о предстоящем старте
 									</div>
+								</div>
+								<div class="swiper-slide slider-item">
+									<div class="slider-letter-text">
+										Просматривай список по популярным и новым событиям
+									</div>
+								</div>
+								<div class="swiper-slide slider-item">
+									<div class="slider-letter-text">
+										Зарегистрируйся и оплачивай участие не выходя из приложения
+									</div>
+								</div>
+								<div class="swiper-slide slider-item">
+									<div class="slider-letter-text">
+										Отправляй сообщения организаторам мероприятий
+									</div>
+								</div>
+								<div class="swiper-slide slider-item">
+									<div class="slider-letter-text">Изучай свои результаты</div>
 								</div>
 							</div>
 
@@ -765,6 +799,6 @@
 		<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
 		<!-- Custom JS -->
-		<script src="src/js/script.js"></script>
+		<script src="src/js/script.js?date=4546"></script>
 	</body>
 </html>
