download appp :: open link in new tab

--- a/index.html
+++ b/index.html
@@ -218,12 +218,14 @@
 									</div>
 									<div class="mt-auto d-inline-flex slide-item-button-group">
 										<a
+											target="_blank"
 											href="https://apps.apple.com/kz/app/moveon/id1487087195"
 											class="icon-download"
 										>
 											<img src="src/assets/img/appstore-white.svg" alt="" />
 										</a>
 										<a
+											target="_blank"
 											href="https://play.google.com/store/apps/details?id=kz.moveon.android"
 											class="icon-download"
 										>
@@ -236,12 +238,14 @@
 								<img src="src/assets/img/phone-front-picture.png" alt="" />
 								<div class="mt-auto d-inline-flex slide-item-button-group">
 									<a
+										target="_blank"
 										href="https://apps.apple.com/kz/app/moveon/id1487087195"
 										class="icon-download"
 									>
 										<img src="src/assets/img/appstore-white.svg" alt="" />
 									</a>
 									<a
+										target="_blank"
 										href="https://play.google.com/store/apps/details?id=kz.moveon.android"
 										class="icon-download"
 									>
@@ -272,12 +276,14 @@
 									</div>
 									<div class="mt-auto d-inline-flex slide-item-button-group">
 										<a
+											target="_blank"
 											href="https://apps.apple.com/kz/app/moveon/id1487087195"
 											class="icon-download"
 										>
 											<img src="src/assets/img/appstore-white.svg" alt="" />
 										</a>
 										<a
+											target="_blank"
 											href="https://play.google.com/store/apps/details?id=kz.moveon.android"
 											class="icon-download"
 										>
@@ -290,12 +296,14 @@
 								<img src="src/assets/img/phone-front-picture.png" alt="" />
 								<div class="mt-auto d-inline-flex slide-item-button-group">
 									<a
+										target="_blank"
 										href="https://apps.apple.com/kz/app/moveon/id1487087195"
 										class="icon-download"
 									>
 										<img src="src/assets/img/appstore-white.svg" alt="" />
 									</a>
 									<a
+										target="_blank"
 										href="https://play.google.com/store/apps/details?id=kz.moveon.android"
 										class="icon-download"
 									>
@@ -517,12 +525,14 @@
 						</div>
 						<div class="button-group d-inline-flex">
 							<a
+								target="_blank"
 								href="https://apps.apple.com/kz/app/moveon/id1487087195"
 								class="icon-download"
 							>
 								<img src="src/assets/img/appstore-black.svg" alt="" />
 							</a>
 							<a
+								target="_blank"
 								href="https://play.google.com/store/apps/details?id=kz.moveon.android"
 								class="icon-download"
 							>
@@ -776,12 +786,14 @@
 						<div class="footer-col-title text-white">Скачать приложение:</div>
 						<div class="button-group d-flex flex-column">
 							<a
+								target="_blank"
 								href="https://apps.apple.com/kz/app/moveon/id1487087195"
 								class="footer-icon-download"
 							>
 								<img src="src/assets/img/appstore-white.svg" alt="" />
 							</a>
 							<a
+								target="_blank"
 								href="https://play.google.com/store/apps/details?id=kz.moveon.android"
 								class="footer-icon-download"
 							>
