form -> send mail()

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 								<p class="success-p">Спасибо что Вы с нами</p>
 							</div>
 							<div class="modal-row">
-								<p class="success-p text-green">команда Move on</p>
+								<p class="success-p text-green">команда Move On</p>
 							</div>
 						</div>
 					</div>
@@ -68,35 +68,35 @@
 								type="text"
 								class="madal-input"
 								placeholder="Фамилия Имя"
-								name=""
+								name="fio"
 								id=""
 							/>
 							<input
 								type="text"
 								class="madal-input"
 								placeholder="Компания"
-								name=""
+								name="company"
 								id=""
 							/>
 							<input
 								type="number"
 								class="madal-input"
 								placeholder="Телефон"
-								name=""
+								name="phone"
 								id=""
 							/>
 							<input
 								type="email"
 								class="madal-input"
 								placeholder="Email"
-								name=""
+								name="email"
 								id=""
 							/>
 							<input
 								type="text"
 								class="madal-input"
 								placeholder="Должность"
-								name=""
+								name="position"
 								id=""
 							/>
 							<input
