--- a/index.html
+++ b/index.html
@@ -631,9 +631,7 @@
 					</div>
 				</div>
 				<div class="d-flex flex-wrap justify-content-around">
-					<a href="javascript:void();" class="btn-partner onModal"
-						>Стань партнером</a
-					>
+					<a class="btn-partner onModal">Стань партнером</a>
 				</div>
 			</div>
 		</section>
