--- a/index.html
+++ b/index.html
@@ -17,6 +17,20 @@
 		<link rel="stylesheet" href="src/css/bootstrap-grid.min.css" />
 		<link rel="stylesheet" href="src/css/custom.css" />
 		<link rel="stylesheet" href="src/css/mobile.css" />
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script
+			async
+			src="https://www.googletagmanager.com/gtag/js?id=G-8PZQGCM5DJ"
+		></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag('js', new Date());
+
+			gtag('config', 'G-8PZQGCM5DJ');
+		</script>
 	</head>
 	<body>
 		<div class="modal">
