--- a/index.html
+++ b/index.html
@@ -640,12 +640,14 @@
 						</a>
 						<a href="">
 							<img src="src/assets/img/icons/download.svg" alt="" />
-							<span class="text-muted">Скачать медиакит</span>
+							<span class="text-muted">Скачать презентацию</span>
 						</a>
 					</div>
 				</div>
 				<div class="d-flex flex-wrap justify-content-around">
-					<a class="btn-partner onModal">Стань партнером</a>
+					<a class="btn-partner onModal" style="cursor: pointer"
+						>Стань партнером</a
+					>
 				</div>
 			</div>
 		</section>
@@ -701,16 +703,22 @@
 			</div>
 			<div class="container partner-link-wrapper">
 				<div class="d-flex flex-wrap flex-row justify-content-around">
-					<a href="#" class="partner-link align-self-center">
+					<a href="http://fetur.kz/" class="partner-link align-self-center">
 						<img src="src/assets/img/фст 1.png" alt="parter_1" />
 					</a>
-					<a href="#" class="partner-link align-self-center">
+					<a href="https://athletex.kz/" class="partner-link align-self-center">
 						<img src="src/assets/img/Athletex2 1.png" alt="parter_2" />
 					</a>
-					<a href="#" class="partner-link align-self-center">
+					<a
+						href="https://www.instagram.com/run.content.kz/"
+						class="partner-link align-self-center"
+					>
 						<img src="src/assets/img/RC logo 1.png" alt="parter_3" />
 					</a>
-					<a href="#" class="partner-link align-self-center">
+					<a
+						href="https://gorny-club.kz/"
+						class="partner-link align-self-center"
+					>
 						<img src="src/assets/img/GC 1.png" alt="parter_4" />
 					</a>
 				</div>
