--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Move On</title>
+		<meta
+			name="description"
+			content="Универсальная платформа для тех, кто любит спорт! Регистрируйся легко, плати онлайн и фиксируй свой успех!"
+		/>
 		<link
 			rel="stylesheet"
 			href="https://unpkg.com/swiper/swiper-bundle.min.css"
