--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 			type="image/x-icon"
 		/>
 		<link rel="stylesheet" href="src/css/bootstrap-grid.min.css" />
-		<link rel="stylesheet" href="src/css/custom.css" />
-		<link rel="stylesheet" href="src/css/mobile.css" />
+		<link rel="stylesheet" href="src/css/custom.css?re=564664" />
+		<link rel="stylesheet" href="src/css/mobile.css?re=564664" />
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script
 			async
