--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 			href="src/assets/img/icons/favicon.svg"
 			type="image/x-icon"
 		/>
+		<link href="src\assets\font\Roboto-Regular.ttf" rel="stylesheet" />
+		<link href="src\assets\font\Roboto-Medium.ttf" rel="stylesheet" />
+		<link href="src\assets\font\Roboto-Bold.ttf" rel="stylesheet" />
 		<link rel="stylesheet" href="src/css/bootstrap-grid.min.css" />
 		<link rel="stylesheet" href="src/css/custom.css?re=564664" />
 		<link rel="stylesheet" href="src/css/mobile.css?re=564664" />
@@ -707,19 +710,29 @@
 			</div>
 			<div class="container partner-link-wrapper">
 				<div class="d-flex flex-wrap flex-row justify-content-around">
-					<a href="http://fetur.kz/" class="partner-link align-self-center">
+					<a
+						target="_blank"
+						href="http://fetur.kz/"
+						class="partner-link align-self-center"
+					>
 						<img src="src/assets/img/фст 1.png" alt="parter_1" />
 					</a>
-					<a href="https://athletex.kz/" class="partner-link align-self-center">
+					<a
+						target="_blank"
+						href="https://athletex.kz/"
+						class="partner-link align-self-center"
+					>
 						<img src="src/assets/img/Athletex2 1.png" alt="parter_2" />
 					</a>
 					<a
+						target="_blank"
 						href="https://www.instagram.com/run.content.kz/"
 						class="partner-link align-self-center"
 					>
 						<img src="src/assets/img/RC logo 1.png" alt="parter_3" />
 					</a>
 					<a
+						target="_blank"
 						href="https://gorny-club.kz/"
 						class="partner-link align-self-center"
 					>
@@ -770,30 +783,45 @@
 							"
 						>
 							<a
+								target="_blank"
 								href="https://www.youtube.com/channel/UCCBVXgboWqSJINcg6f-EtaQ/about"
 								class="icon-item"
 							>
 								<img src="src/assets/img/icons/youtube.svg" />
 							</a>
 							<a
+								target="_blank"
 								href="https://www.instagram.com/moveon.kz/?hl=ru"
 								class="icon-item"
 							>
 								<img src="src/assets/img/icons/instagram.svg" />
 							</a>
-							<a href="https://ok.ru/profile/595242537266" class="icon-item">
+							<a
+								target="_blank"
+								href="https://ok.ru/profile/595242537266"
+								class="icon-item"
+							>
 								<img src="src/assets/img/icons/ok.svg" />
 							</a>
-							<a href="https://vk.com/public203997913" class="icon-item">
+							<a
+								target="_blank"
+								href="https://vk.com/public203997913"
+								class="icon-item"
+							>
 								<img src="src/assets/img/icons/vk.svg" />
 							</a>
 							<a
+								target="_blank"
 								href="https://www.facebook.com/Move-On-101555015415214/  "
 								class="icon-item"
 							>
 								<img src="src/assets/img/icons/facebook.svg" />
 							</a>
-							<a href="https://t.me/moveon_kz" class="icon-item">
+							<a
+								target="_blank"
+								href="https://t.me/moveon_kz"
+								class="icon-item"
+							>
 								<img src="src/assets/img/icons/telegram.svg" />
 							</a>
 						</div>
