--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
 										srcset=""
 									/>
 									<img
-										src="src/assets/img/about-img-1.png"
+										src="src/assets/img/about-img-1.jpg"
 										class="step-main-img"
 										alt=""
 										srcset=""
@@ -418,7 +418,7 @@
 										srcset=""
 									/>
 									<img
-										src="src/assets/img/about-img-4.png"
+										src="src/assets/img/about-img-4.jpg"
 										class="step-main-img"
 										alt=""
 										srcset=""
@@ -456,7 +456,7 @@
 										srcset=""
 									/>
 									<img
-										src="src/assets/img/about-img-2.png"
+										src="src/assets/img/about-img-2.jpg"
 										class="step-main-img"
 										alt=""
 										srcset=""
@@ -493,7 +493,7 @@
 										srcset=""
 									/>
 									<img
-										src="src/assets/img/about-img-3.png"
+										src="src/assets/img/about-img-3.jpg"
 										class="step-main-img"
 										alt=""
 										srcset=""
