--- a/index.html
+++ b/index.html
@@ -151,15 +151,17 @@
 					<div class="d-flex flex-wrap menu-wrapper">
 						<ul class="menu-ul d-inline-flex flex-wrap align-self-center">
 							<li class="menu-li">
-								<a href="#about">Проект Move On</a>
+								<span onclick="goto('about')">Проект Move On</span>
 							</li>
 							<li class="menu-li">
-								<a href="#sign">Стать участником</a>
+								<span onclick="goto('sign')">Стать участником</span>
 							</li>
 							<li class="menu-li">
-								<a href="#partner">Стать партнером</a>
+								<span onclick="goto('partner')">Стать партнером</span>
 							</li>
-							<li class="menu-li"><a href="#contacts">Контакты</a></li>
+							<li class="menu-li">
+								<span onclick="goto('contacts')">Контакты</span>
+							</li>
 						</ul>
 					</div>
 					<div
@@ -755,7 +757,7 @@
 							г. Алматы, пр. Достык, 132, офис 6
 						</div>
 						<div class="footer-col-text text-white">+7 776 272 4072</div>
-						<div class="footer-col-text text-white">kz.moveon@gmail.com</div>
+						<div class="footer-col-text text-white">info@moveon.kz</div>
 					</div>
 					<div
 						class="
