download links added

--- a/index.html
+++ b/index.html
@@ -640,11 +640,11 @@
 				</div>
 				<div class="d-flex flex-wrap justify-content-around">
 					<div class="download-links">
-						<a href="">
+						<a target="_blank" href="/src/assets/docs/mediaKit.pdf" download>
 							<img src="src/assets/img/icons/download.svg" alt="" />
 							<span class="text-muted">Скачать медиакит</span>
 						</a>
-						<a href="">
+						<a target="_blank" href="src/assets/docs/forPartners.pdf" download>
 							<img src="src/assets/img/icons/download.svg" alt="" />
 							<span class="text-muted">Скачать презентацию</span>
 						</a>
